tests/expectations/compiler/group/no_space_between_literal.out
Error [EPAR0370005]: expected '&&', '||', '&', '|', '^', '==', '!=', '<', '<=', '>', '>=', '+', '-', '*', '/', '**', '%', '<<', '>>', '[', '.', ';', '?', 'as' -- found 'group'
    --> compiler-test:4:24
     |
   4 |       let g: group = 1 group;
     |                        ^^^^^
